--- a/package.json
+++ b/package.json
@@ -1,28 +1,51 @@
 {
   "name": "dyno-matching-app",
   "version": "1.0.0",
+  "description": "A modern dating app with swipe-based matching, real-time chat, and location-based discovery",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "start:clean": "expo start -c",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:ios": "expo build:ios",
+    "build:android": "expo build:android",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "dependencies": {
-    "expo": "~51.0.0",
-    "expo-status-bar": "~1.12.1",
+    "expo": "~53.0.0",
+    "expo-status-bar": "~2.2.3",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-web": "~0.19.10",
     "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.0",
-    "@react-native-community/datetimepicker": "8.0.1",
-    "@react-native-community/slider": "4.5.2",
-    "expo-image-picker": "~15.0.7",
-    "expo-location": "~17.0.1"
+    "@expo/metro-runtime": "~5.0.5",
+    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/slider": "4.5.6",
+    "expo-image-picker": "~16.1.4",
+    "expo-location": "~18.1.6",
+    "expo-linear-gradient": "~14.1.5",
+    "@supabase/supabase-js": "^2.39.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "react-native-gesture-handler": "~2.18.0",
+    "react-native-reanimated": "~3.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0"
+    "@babel/core": "^7.24.0",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0"
   },
+  "keywords": [
+    "dating",
+    "matching",
+    "social",
+    "react-native",
+    "expo",
+    "supabase"
+  ],
+  "author": "DYNO Team",
+  "license": "MIT",
   "private": true
 }
