--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "expo-location": "~18.1.6",
     "expo-linear-gradient": "~14.1.5",
     "@supabase/supabase-js": "^2.39.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "react-native-gesture-handler": "~2.18.0",
-    "react-native-reanimated": "~3.15.0"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
